--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #d6e1f7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(10px + 1vmin);
+  color: rgb(12, 1, 1);
 }
 
 .App-link {
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.label {
+  color: white;
+  padding: 8px;
+}
+
+.success {
+  background-color: #04AA6D;
+}
+
+/* Green */
+.info {
+  background-color: #2196F3;
+}
+
+/* Blue */
+.warning {
+  background-color: #ff9800;
+}
+
+/* Orange */
+.danger {
+  background-color: #f44336;
+}
+
+/* Red */
+.other {
+  background-color: #e7e7e7;
+  color: black;
+}
+
+/* Gray */
+
