--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -1,29 +1,17 @@
-header {
-  text-align: center;
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
 
-nav .navMenu {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  float: right;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-nav li {
-  margin-right: 20px;
-  cursor: pointer;
-}
-
-nav a {
-  text-decoration: none;
-}
-
-nav a:hover {
-  color: #ccc;
-}
-
-nav a.active {
-  color: #666;
-  font-weight: bold;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
