--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -1,9 +1,39 @@
 .menu {
-    list-style-type: none;
-    padding: 10px;
+  list-style-type: none;
+  padding: 10px;
+}
+a {
+  color: #4f4e4e;
+}
+a :hover {
+  background-color: #f29f9f;
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+  padding: 5px;
+  border-radius: 10px;
+}
+.menu li {
+  margin-left: 10px;
+  display: inline;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown li {
+  margin-left: 10px;
+  display: grid;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 5px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
-.menu  li {
-        margin-left: 10px;
-    display: inline;
+.dropdown:hover .dropdown-content {
+  display: block;
 }
