--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,7 @@ ul {
   padding: 0;
   margin: 0;
   text-align: left;
-  background-color: #d5d1d1;
+  background-color: #e4e0e0;
   width: 100%;
 }
 
@@ -17,12 +17,14 @@ li:last-child {
 }
 
 li:hover {
-  background-color: #b88c8c;
-  color: white;
+  background-color: #f38989;
+  color: white !important;
   font-weight: bold;
   text-decoration: underline;
   padding: 5px;
   border-radius: 10px;
+  font-size: 20px;
+  cursor: pointer;
 }
 table {
   width: 100%;
@@ -48,10 +50,39 @@ table td:nth-child(3) {
   height: 48px;
   border: 5px solid #fff;
   border-bottom-color: #ff3d00;
+  color: white;
+
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+}
+
+.buttonLink {
+  background: none !important;
+  border: none;
+  padding: 0 !important;
+  /*optional*/
+  font-family: arial, sans-serif;
+  /*input has OS specific font-family*/
+  color: #069;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.buttonLink:hover {
+  color: white;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.listScroll {
+  height: 600px;
+  overflow: auto;
+}
+
+.inputBox {
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 @keyframes rotation {
