--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,7 @@ ul {
   padding: 0;
   margin: 0;
   text-align: left;
-  background-color: #e4e0e0;
+  background-color: #e4e4e0;
   width: 100%;
 }
 
@@ -83,6 +83,19 @@ table td:nth-child(3) {
 .inputBox {
   margin-bottom: 5px;
   margin-top: 5px;
+}
+.SearchData {
+  display: flex;
+  width: 100%;
+  margin: 0 auto;
+}
+.SearchData > div {
+  width: 20%;
+  margin: 0 auto;
+}
+.SearchBtn {
+  width: 100%;
+  margin: 0 auto;
 }
 
 @keyframes rotation {
